src/css/index.css
/* -- Global -- */

*, ::before, ::after {
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

:root {
    --main-text-black: #111111;
    --main-bg-blue: #00A9FD;
    --hero-yellow: #FFFEE1;
    --display-font-family: 'Passion One', sans-serif;
    --display-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
    /* Scale font size for any screen size. https://css-tricks.com/books/volume-i/scale-typography-screen-size/*/
    /* font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
    font-size: calc(24px + (32 - 24) * ((100vw - 300px) / (1600 - 300)));
    line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
}

body {
    margin: 0;
    color: white;
    font-family: sans-serif;
}

h1, .hero h2+p {
    font-family: var(--display-font-family);
    text-shadow: var(--display-shadow);
}

header, main, nav, footer {
    z-index: -10;
}

button {
    border-radius: 0.25rem;
    padding: 0.5rem 1rem;
    font-size: 0.75rem;
}

/* -- Header -- */

header {
    background: var(--main-bg-blue);
    padding: 0.75rem 1rem;
    color: white;
}

header h1 {
    margin: 0;
    margin-right: 0.5rem;
    font-size: 1.5rem;
}

header .brand, header h1, header nav {
    display: inline-block;
}


header .brand {
    margin-right: 1rem;
    margin-bottom: 0.5rem;
}

.brand__logo {
    /* font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
    width: calc(100px + (150 - 100) * ((100vw - 300px) / (1600 - 300)));
    display: inline-block;
    vertical-align: bottom;
    filter: drop-shadow(var(--display-shadow));
}

/* -- Top Nav -- */

header nav>ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

header nav li {
    display: inline-block;
    margin-right: 0;
    font-family: var(--display-font-family);
    text-shadow: var(--display-shadow);
}

header nav li+li::before {
    content: ' / '
}


/* -- Hero -- */

.hero {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 75vh;
    background: var(--main-bg-blue);
    padding: 0.5rem 1rem;
    z-index: -10;
}

.hero__content {
    max-width: 35rem;
}

.hero h2 {
    font-size: 2.4rem;
    line-height: 2.4rem;
    color: var(--hero-yellow);
    font-family: var(--display-font-family);
    text-shadow: var(--display-shadow);
    margin: 0;
    margin-bottom: 0.3rem;
}

.hero p {
    font-size: 1.4rem;
    font-family: var(--display-font-family);
    text-shadow: var(--display-shadow);
    line-height: 1.4rem;
    color: white;
    margin: 0;
    margin-bottom: 1.5rem;
    
}

.hero button {
    margin-right: 0.5rem;
    margin-bottom: 0.5rem;
    font-family: var(--display-font-family);
    text-shadow: var(--display-shadow);
    box-shadow: var(--display-shadow), inset var(--display-shadow);
    background: transparent;
    border: 2px solid white;
    color: white;
}

.hero .button--primary {
    background: white;
    color: var(--main-text-black);
    text-shadow: none;
    box-shadow: var(--display-shadow);
}

.hero__bg {
    position: absolute;
    bottom: 1rem;
    right: 1rem;
    z-index: -1;
}

.hero__bg img {
    /* calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
    width: calc(150px + (500 - 150) * ((100vw - 300px) / (1600 - 300)));
    max-width: 500px;
}

